fix navbar on mobile

--- a/src/components/Layout/Contact/Contact.css
+++ b/src/components/Layout/Contact/Contact.css
@@ -28,3 +28,11 @@
     transform: scale(1.2); /* Enlarge the image */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   }
+
+  @media screen and (max-width: 768px) {
+    .contact{
+      padding-bottom: 30px;
+    }
+
+
+    }
